<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailsProductActivity">

    <LinearLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorprimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_arrow_back_24"
            android:onClick="DetailToMain"
            />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerDetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageProduct"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="@id/containerDetail"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="TODO" />


        <TextView
            android:id="@+id/titleDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/imageProduct"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorprimary"
            />

        <View
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:background="@color/colorprimary"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/titleDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/descriptionDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world_hello_world_hello_world_hello_world_hello_world_hello_world"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/titleDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/titleCulture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cultura"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/descriptionDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorprimary"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/infoCulture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infocuture"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/titleCulture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/titleArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area_suportada"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/infoCulture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorprimary"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/infoArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hello, World! Hello, World!Hello"
            android:textSize="12dp"
            app:layout_constraintTop_toBottomOf="@id/titleArea"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddToBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orcamento"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/background_button"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>